// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`EntryStatus renders 1`] = `null`;

exports[`EntryStatus renders 2`] = `
<p
  class="MuiTypography-root MuiTypography-body1 css-17spemx-MuiTypography-root"
>
  (event.states.tentative_info)
</p>
`;

exports[`EntryStatus renders 3`] = `
<p
  class="MuiTypography-root MuiTypography-body1 css-17spemx-MuiTypography-root"
>
  (event.states.cancelled_info)
</p>
`;

exports[`EntryStatus renders 4`] = `null`;

exports[`EntryStatus renders 5`] = `
<p
  class="MuiTypography-root MuiTypography-body1 css-17spemx-MuiTypography-root"
>
  (event.states.extended_info)
</p>
`;
